--- a/src/app/components/shell/home/home.component.html
+++ b/src/app/components/shell/home/home.component.html
@@ -1,3 +1,33 @@
-<p>
-  home works!
-</p>
+<table class="table table-dark">
+  <thead>
+    <tr class="header">
+      <th scope="col">#CODE</th>
+      <th scope="col">NAME</th>
+      <th scope="col">DESCRIPTION</th>
+      <th scope="col">HEAD</th>
+      <th scope="col"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let department of departments">
+      <td>{{ department.code }}</td>
+      <td>{{ department.name }}</td>
+      <td>{{ department.description }}</td>
+      <td>{{ department.head }}</td>
+      <td>
+        <button class="btn btn-info mr-1">
+          Edit
+        </button>
+        <button class="btn btn-outline-warning ml-1">
+          Delete
+        </button>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+<div class="text-center m-5">
+  <button type="button" class="btn btn-primary btn-lg">
+    Create New
+  </button>
+</div>
