--- a/src/app/components/shell/home/home.component.html
+++ b/src/app/components/shell/home/home.component.html
@@ -27,7 +27,11 @@
 </table>
 
 <div class="text-center m-5">
-  <button type="button" class="btn btn-primary btn-lg">
+  <button
+    type="button"
+    routerLink="/new-department"
+    class="btn btn-primary btn-lg"
+  >
     Create New
   </button>
 </div>
