--- a/src/app/components/shell/home/home.component.html
+++ b/src/app/components/shell/home/home.component.html
@@ -18,7 +18,10 @@
         <button class="btn btn-info mr-1">
           Edit
         </button>
-        <button class="btn btn-outline-warning ml-1">
+        <button
+          class="btn btn-outline-warning ml-1"
+          (click)="removeItem(department._id, department.name)"
+        >
           Delete
         </button>
       </td>
