--- a/src/app/components/shell/header-menu/header-menu.component.html
+++ b/src/app/components/shell/header-menu/header-menu.component.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-dark bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" [routerLink]="['/home']">OfficeApp Angular 7</a>
-        <form class="form-inline">
-            <a class="my-2 p-2 my-sm-0 links">
-                Logout
-            </a>
-        </form>
-    </div>
+  <div class="container-fluid">
+    <a class="navbar-brand" [routerLink]="['/home']">OfficeApp Angular 7</a>
+    <form class="form-inline">
+      <a class="my-2 p-2 my-sm-0 links" [routerLink]="['/logout']">
+        Logout
+      </a>
+    </form>
+  </div>
 </nav>
