--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -6,28 +6,25 @@
           <div class="col-md-6 mx-auto">
             <div class="card border-secondary opaq">
               <div class="card-header">
-                <h3 class="mb-0 my-2">Login Page</h3>
+                <h3 class="mb-0 my-2">Sign up Page</h3>
               </div>
               <form
                 class="card-body form-group"
-                [formGroup]="loginForm"
+                [formGroup]="signupForm"
                 (ngSubmit)="onSubmit()"
               >
                 <div class="form-group">
-                  <label for="email">Email</label>
+                  <label for="inputEmail">Email</label>
                   <input
-                    id="email"
                     formControlName="email"
                     type="email"
                     class="form-control"
-                    placeholder="john@yahoo.com"
+                    id="inputEmail"
+                    placeholder="email@gmail.com"
                     autocomplete="false"
                   />
-                  <div *ngIf="submitted && form.password.errors">
-                    <div
-                      *ngIf="form.password.errors"
-                      [ngStyle]="{ color: 'red' }"
-                    >
+                  <div *ngIf="submitted && form.email.errors">
+                    <div *ngIf="form.email.errors" [ngStyle]="{ color: 'red' }">
                       Email is required
                     </div>
                   </div>
@@ -40,6 +37,7 @@
                     type="password"
                     class="form-control"
                     placeholder="password"
+                    title="At least 6 characters with letters and numbers"
                     autocomplete="false"
                   />
                   <div *ngIf="submitted && form.password.errors">
@@ -52,37 +50,39 @@
                   </div>
                 </div>
                 <div class="form-group">
+                  <label for="verifyPassword">Verify</label>
+                  <input
+                    id="verifyPassword"
+                    type="password"
+                    class="form-control"
+                    placeholder="password (again)"
+                    autocomplete="false"
+                  />
+                </div>
+                <div class="form-group">
                   <button
                     type="submit"
                     class="mr-1 btn btn-success btn-lg float-right"
                   >
-                    Login
+                    Register
+                  </button>
+                  <button
+                    type="button"
+                    (click)="back()"
+                    class="mr-1 btn btn-default btn-lg float-right"
+                  >
+                    Cancel
                   </button>
                 </div>
               </form>
             </div>
           </div>
         </div>
-        <!-- /row -->
       </div>
-      <!-- /col -->
     </div>
-    <!-- /row -->
   </div>
-  <!-- /container -->
-
-  <div class="outside-form">
-    <p class="text-center">
-      Forgot your password? <a (click)="reset()">Reset</a>
-    </p>
-
-    <p class="text-center">
-      Not yet a member? <a routerLink="/signup">Sign up</a> here.
-    </p>
-
-    <div class="text-center">
-      <strong>Values to be sent: </strong
-      ><span>{{ loginForm.value | json }}</span>
-    </div>
+  <div class="text-center outside-form">
+    <strong>Values to be sent: </strong
+    ><span>{{ signupForm.value | json }}</span>
   </div>
 </div>
